[package]
name = "bfg9000"
version = "0.2.0"
edition = "2021"


[dependencies]
fastwebsockets = { version = "0.6", features = ["simd", "upgrade"] }
http-body-util = "0"
hyper = "1"
hyper-util = "0"
rustls-pki-types = "1"
serde = "1"
serde_json = "1"
simdutf8 = { version = "0", features = ["aarch64_neon"] }
tokio = { version = "1", default-features = false, features = ["net", "parking_lot", "rt"] }
tokio-rustls = "0.25"
url = "2"
utf-8 = "0"
webpki-roots = "0"
chrono = "0.4"
solana-client = "2.1.4"
solana-sdk = "2.1.4"
solana-program = "2.1.4"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
dotenv = "0.15.0"
bs58 = "0.5.1"
base64 = "0.22.1"
helius = "0.2.4"
thiserror = "2.0.6"
derive_more = { version = "1", features = ["display"] }
futures = "0.3.31"
rand = "0.8.5"
bincode = "1.3.3"
rig-core = "0.6.1"
anyhow = "1.0.95"
rusqlite = "0.32.1"
pdf-extract = "0.8.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
regex = "1.11.1"
lopdf = "0.34.0"
reqwest = { version = "0.12.12", features = ["json"] }
rig-mongodb = "0.2.2"
mongodb = "3.2.0"
rig-derive = "0.1.0"

[features]
default = ["simd"]
simd = []

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["macros",  "parking_lot", "rt-multi-thread", "time"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
